SUBDIRS= inc
lib_LTLIBRARIES = libmas_zoctools.la libmas_msgtools.la libmas_thread_tools.la 

libmas_zoctools_la_SOURCES = mas_cli_options.c mas_curses.c
libmas_msgtools_la_SOURCES = mas_msg_tools.c
libmas_thread_tools_la_SOURCES = mas_thread_tools.c mas_lib_thread.c
# libmas_tools_la_CFLAGS = ${AM_CFLAGS} -lmas_thread_tools

