# noinst_HEADERS = mas_listener_control.h mas_lcontrol_object.h mas_listener_control_list.h mas_listener.h mas_listeners.h mas_listener_wait_client.h
libzocromas_mas_listenerincludedir = $(includedir)/mastar/listener
libzocromas_mas_listenerinclude_HEADERS = mas_listener_control.h mas_lcontrol_object.h mas_listener_control_list.h \
		mas_listener.h mas_listeners.h mas_listener_wait_client.h
