# includedir=mastar/tools
# noinst_HEADERS = mas_arg_tools.h mas_tools.h 
# include_HEADERS = mas_arg_tools.h mas_tools.h 
libmas_arg_toolsincludedir = $(includedir)/mastar/tools
libmas_arg_toolsinclude_HEADERS = mas_arg_tools.h
libmas_toolsincludedir = $(includedir)/mastar/tools
libmas_toolsinclude_HEADERS = mas_tools.h
